[project]
name = "gex-model-exporter"
version = "0.1.0"
description = "gex-model-exporter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gguf>=0.17.0",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.3.0",
    "onnxsim>=0.4.36",
    "optimum>=1.26.1",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]


# [[tool.uv.index]]
# name = "pytorch-cu118"
# url = "https://download.pytorch.org/whl/cu118"
# explicit = true

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true

[tool.uv.sources]
# torch = [
#   {index = "pytorch-cu128"},
# ]
# torchvision = [
#   {index = "pytorch-cu128"},
# ]
gguf = { path = "./gguf-py", editable = true }

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3",
]
